# nas

./: pyproject.toml
nas/: model_zoo.py
nas/imagenet_classification/: eval_ofa_net.py  eval_specialized_net.py  train_ofa_net.py
nas/imagenet_classification/data_providers/: base_provider.py  imagenet.py
nas/imagenet_classification/elastic_nn/: utils.py
nas/imagenet_classification/networks/: mobilenet_v3.py  proxyless_nets.py  resnets.py
nas/imagenet_classification/run_manager/: distributed_run_manager.py  run_config.py  run_manager.py
nas/pose/configs/: train_coco_all.cfg  train_coco_depth.cfg
nas/pose/elastic_nn/: ofa_mbv3.py  ofa_resnet.py
nas/pose/latency_estimator/: build_latency_table.py  calculate_model_latency.py
nas/pose/networks/: mobilenet_v3.py  pose.py  resnet.py
nas/pose/train/: load_state.py  train.py  train_dist.py
nas/search/accuracy_predictor/: acc_dataset.py  arch_encoder.py
nas/search/efficiency_predictor/: __init__.py  latency_lookup_table.py
nas/tutorial/: accuracy_predictor.py  flops_table.py  imagenet_eval_helper.py  latency_table.py
nas/utils/: common_tools.py  layers.py  my_modules.py  pytorch_modules.py  pytorch_utils.py
ofa/: model_zoo.py
ofa/imagenet_classification/: eval_ofa_net.py  eval_specialized_net.py  train_ofa_net.py
ofa/imagenet_classification/data_providers/: imagenet.py
ofa/imagenet_classification/elastic_nn/: utils.py
ofa/tutorial/: accuracy_predictor.py  evolution_finder.py  flops_table.py  imagenet_eval_helper.py  latency_table.py
ofa/utils/: common_tools.py  layers.py  pytorch_utils.py
(+27 files in other folders)
