[tool.poetry]
name = "nas"
version = "1.0.0"
description = ""
authors = ["Amit Zohar"]

[[tool.poetry.source]]
name = "gambit"
url = "http://gambit:8081/artifactory/api/pypi/pypi/simple"

[tool.poetry.dependencies]
python = "^3.8.2"
torch = "^1.8.1"
torchvision = "^0.9.1"
trigo-logging = "^1.11.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
tqdm = "^4.61.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
